Correct 'align-item' to 'align-items' in header
Fix typo in CSS property for header alignment.

--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,7 @@ input[type="checkbox"]:checked {
   background-color: #fff;
     display: flex;
     justify-content: space-between;
+    align-item:center;
     padding: 16px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.04);
     position: fixed;
